finish the rewrite